--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Memo Сard Game</title>
     <script>
       if (window.location.pathname === "/") {
-        const basename = "/react-memo";
+        const basename = "/react-memo_CARDS";
         // Редирект на basename
         // Этот же basename указан в homepage в package.json
         // Этот же basename указан в basename роутера
@@ -37,7 +37,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" translate="no"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
